<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_feed"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/menu_item_feed" />

        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/ic_local_offer_black_24dp"
            android:title="@string/menu_item_events" />

        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/menu_item_friend" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/menu_item_notifications" />
    </group>

    <item android:title="@string/menu_item_user">
        <menu>
            <item
                android:id="@+id/nav_account"
                android:icon="@drawable/ic_mood_black_24dp"
                android:title="@string/menu_item_account" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_input_black_24dp"
                android:title="@string/menu_item_logout" />
        </menu>
    </item>

</menu>
